noctel-gitops/networking/pdx1/qa/qa-display-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-display-ingress
  namespace: qa
  annotations:
spec:
  ingressClassName: traefik-qa
  rules:
  - host: pdx1-qa-display.telnoc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noctel-display
            port:
              number: 3001

  tls:
  - hosts:
    - pdx1-qa-display.telnoc.com
