noctel-gitops/networking/pdx1/qa/qa-lns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-lns-ingress
  namespace: qa
  annotations:
spec:
  ingressClassName: traefik-qa
  rules:
  - host: pdx1-qa-lns.telnoc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chirpstack-gateway-bridge
            port:
              number: 3001

  tls:
  - hosts:
    - pdx1-qa-lns.telnoc.com
