noctel-gitops/networking/pdx1/qa/qa-noctel-notify-email-in-smtp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: noctel-notify-email-in-smtp-relay
  namespace: qa
spec:
  entryPoints:
    - smtp-relay
  routes:
    - match: HostSNI(`*`)
      services:
        - name: noctel-notify-email-in
          port: 9025
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: noctel-notify-email-in-smtp-submit
  namespace: qa
spec:
  entryPoints:
    - smtp-submit
  routes:
    - match: HostSNI(`*`)
      services:
        - name: noctel-notify-email-in
          port: 9587
