noctel-gitops/networking/pdx1/qa/qa-s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-s3-ingress
  namespace: qa
  annotations:
spec:
  ingressClassName: traefik-qa
  rules:
  - host: pdx1-qa-s3.telnoc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seaweedfs-s3
            port:
              number: 8333

  tls:
  - hosts:
    - pdx1-qa-s3.telnoc.com
